# QwickServices_Contact_Integrity_System

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
database/migrations/: 001_initial_schema.sql
database/seed/: test_data.sql
scripts/: run-tests.sh  setup.sh
services/dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
services/dashboard/src/: App.tsx
services/dashboard/tests/: App.test.tsx
services/detection/: Dockerfile  pyproject.toml
services/detection/src/: config.py  main.py  models.py
services/detection/src/api/: routes.py
services/detection/src/engine/: pipeline.py  stage1_rules.py  stage2_nlp.py  stage3_behavioral.py
services/detection/src/patterns/: email.py  intent_phrases.py  obfuscation.py  phone.py  social.py  url.py
services/detection/tests/: test_api.py  test_patterns.py  test_pipeline.py
services/interceptor/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json
services/interceptor/src/: async-emitter.ts  circuit-breaker.ts  config.ts  index.ts  interceptor.ts  types.ts
services/interceptor/tests/: interceptor.test.ts
services/policy/: Dockerfile  README.md  pyproject.toml  run_tests.py
services/policy/src/: config.py  main.py  models.py
services/policy/tests/: test_api.py  test_strikes.py  test_thresholds.py
services/review/: Dockerfile  conftest.py  pyproject.toml
services/review/src/: config.py  main.py  models.py
services/review/tests/: test_api.py  (+1 more)
shared/contracts/: detection.openapi.yaml  policy.openapi.yaml  review.openapi.yaml
(+13 files in other folders)
